--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,19 @@
 plugins {
   id 'com.github.ben-manes.versions' version '0.39.0'
+  id 'application'
 }
  
 group = 'hexlet.code'
 version = '1.0-SNAPSHOT'
+
+application {
+    mainClass = 'hexlet.code.App'
+}
+
+compileJava {
+  options.release = 15
+}
+
+repositories {
+    mavenCentral()
+}
