--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-  id 'com.github.ben-manes.versions' version '0.39.0'
-  id 'application'
+    id 'checkstyle'
+    id 'com.github.ben-manes.versions' version '0.39.0'
+    id 'application'
 }
  
 group = 'hexlet.code'
@@ -11,9 +12,15 @@ application {
 }
 
 compileJava {
-  options.release = 15
+  options.release = 11
 }
 
 repositories {
     mavenCentral()
+}
+
+dependencies {
+    implementation 'info.picocli:picocli:4.6.1'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
+
 }
