--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,6 +17,10 @@ jobs:
           java-version: '15'
       - name: Build with Gradle
         run: make build
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
+      - name: Install with Gradle
+        run: make install
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v2.7.5
         env:
